# cppirtk

./: .gitignore  .travis.yml  CMakeLists.txt  setup.py
ir/: CMakeLists.txt
ir/api/include/: index.hpp
ir/api/src/: index.cpp
ir/indri/: CMakeLists.txt
ir/indri/antlr/: CMakeLists.txt
ir/indri/lemur/: CMakeLists.txt
ir/indri/xpdf/: CMakeLists.txt
ir/indri/zlib/: CMakeLists.txt
mybox/: indri.cpp  indri.pxd  indri.pyx
